--- a/src/pages/other/collect/index.scss
+++ b/src/pages/other/collect/index.scss
@@ -90,3 +90,17 @@
         }
     }
 }
+
+.other-no-tip {
+    padding: 8rem 0;
+    font-weight: 300;
+    color: #aaa;
+    text-align: center;
+    .title {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+    .des {
+        font-size: 1.2rem;
+    }
+}
