--- a/src/pages/gallery/edit/index.scss
+++ b/src/pages/gallery/edit/index.scss
@@ -7,22 +7,19 @@
 }
 
 .chart-edit-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem 1.5rem;
     .edit-input {
         border: none;
         font-size: 1rem;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 1rem 1.5rem;
     }
-    .sub-btn {
-        margin-right: 1rem;
-    }
-
 }
 
 
 .ul-chart-tools {
     display: flex;
+    align-items: center;
     padding: .3rem 1rem;
     background-color: #f7f7fb;
     border-top: 1px solid #eef0f3;
@@ -45,8 +42,9 @@
     }
     .divide {
         width: 1px;
-        height: 100%;
-        background-color: #E8E8E8;
+        height: 1.5rem;
+        margin: 0 .3rem;
+        background-color: #eef0f3;
     }
 }    
 
