--- a/src/pages/user/info/index.scss
+++ b/src/pages/user/info/index.scss
@@ -91,6 +91,74 @@
     }
 }
 
+.add-infos {
+    font-weight: 300;
+    padding: 1rem 3rem;
+    .input {
+        display: block;
+        border: 1px solid #e9e9f4;
+        padding: .6rem;
+        box-sizing: border-box;
+        width: 25rem;
+    }
+    .aim-user {
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid #e9e9f4;
+        color: #808080;
+        padding: .6rem;
+        background-color: #f2f2f5;
+        font-size: .85rem;
+        svg {
+            cursor: pointer;
+        }
+    }
+    .btns {
+        text-align: center;
+    }
+    .mem-search {
+        position: relative;
+        margin-bottom: 1rem;
+    }
+    .ul-add-mem {
+        position: absolute;
+        background-color: #FFF;
+        li {
+            display: flex;
+            align-items: center;
+            width: 25rem;
+            box-sizing: border-box;
+            border-right: 1px solid #e9e9f4;
+            border-left: 1px solid #e9e9f4;
+            border-bottom:  1px solid #e9e9f4;
+            padding: .4rem;
+            font-size: .9rem;
+            cursor: pointer;
+            img {
+                width: 2rem;
+                height: 2rem;
+                border-radius: 50%;
+                margin-right: 1rem;
+            }
+            @extend .transition;
+            &:hover {
+                background-color: #f8f8ff;
+            }
+        }
+    }  
+    textarea {
+        display: block;
+        resize: none;
+        box-sizing: border-box;
+        border: 1px solid #e9e9f4;
+        padding: .6rem;
+        width: 25rem;
+        height: 8rem;
+        color: #666;
+        margin-bottom: 1rem;
+    }
+}
+
 .infos {
     margin: 2rem 2rem 2rem 2rem;
     font-weight: 300;
