--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -129,6 +129,10 @@
                 border-radius: 50%;
             }
         }
+        .space {
+            width: 12rem;
+            text-align: right;
+        }
         .date {
             width: 5rem;
             flex-grow: 0;
