--- a/src/pages/home/index/index.scss
+++ b/src/pages/home/index/index.scss
@@ -170,6 +170,9 @@
     .section-title {
         margin-bottom: 2rem;
     }
+    .news-list {
+        margin-bottom: 2rem;
+    }
     .item-news {
         display: flex;
         margin-bottom: 2rem;
